knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder_Lead__c/pqcrush__Key_Stakeholder_Lead__c.object-meta.xml
<CustomObject>
    <label>Key Stakeholder Lead</label>
    <nameField>
        <displayFormat>KL-{0000}</displayFormat>
        <label>Key Stakeholder Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Stakeholder Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>