knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder_Lead__c/fields/pqcrush__Influence__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Influence__c</fullName>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pqcrush__Key_Stakeholder_Influence</valueSetName>
    </valueSet>
</CustomField>