knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder_Lead__c/fields/pqcrush__Lead__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Key Stakeholder Leads</relationshipLabel>
    <relationshipName>Key_Stakeholder_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>